kubernetes/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itell-api
  labels:
    app: itell-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itell-api
  template:
    metadata:
      labels:
        app: itell-api
    spec:
      containers:
      - name: itell-api
        image: localhost:32000/itell-score-api
        resources:
          limits:
            nvidia.com/gpu: "1"
        volumeMounts:
        - name: models-pvc
          mountPath: /usr/local/huggingface
        - name: logs-pvc
          mountPath: /usr/src/itell-ai/logs
      volumes:
      - name: models-pvc
        persistentVolumeClaim:
          claimName: models-nfs
      - name: logs-pvc
        persistentVolumeClaim:
          claimName: itell-ai-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: itell-api
  labels:
    app: itell-api
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: itell-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        #annotations:
          #nginx.ingress.kubernetes.io/use-regex: "true"
          #nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: itell-api
  namespace: jhub
spec:
  rules:
  - host: itell-api.learlab.vanderbilt.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itell-api
            port:
              number: 8001
